example-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
      - path: /v2/(.*)
        backend:
          serviceName: web2
          servicePort: 8080
      - path: /v3/(.*)
        backend:
          serviceName: node-server
          servicePort: 8080
